just a little styles were born

--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <title>Example #2</title>
   </head>
   <body>
-    <p>111weherhrherqwc</p>
+    <div class="container">
+      <header class="header">
+        <div class="header__top">
+          <div class="header__logo">
+            <img src="/img/logo.svg" alt="logo" />
+          </div>
+          <nav class="header__nav">
+            <ul class="header__list">
+              <li class="header__item"><a href="#">Home</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Shortcodes</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+            <button class="header__basket-button">
+              <img src="img/icons/header-box-icon.svg" alt="basket" />
+            </button>
+            <form class="header__search-form" action="input">
+              <img src="img/icons/search-icon.svg" alt="search-form" />
+            </form>
+          </nav>
+        </div>
+        <section class="header__carousel">
+          <h2 class="header__h2"></h2>
+          <h1 class="header__h1"></h1>
+          <p class="header__text"></p>
+          <button class="header__"></button>
+        </section>
+      </header>
+    </div>
   </body>
 </html>
