all fonts are setted localy with crossbrowserness

--- a/index.html
+++ b/index.html
@@ -17,27 +17,31 @@
           <nav class="header__nav">
             <ul class="header__list">
               <li class="header__item"><a href="#">Home</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Portfolio</a></li>
-              <li><a href="#">Features</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Pricing</a></li>
-              <li><a href="#">Shortcodes</a></li>
-              <li><a href="#">Contact</a></li>
+              <li class="header__item"><a href="#">About Us</a></li>
+              <li class="header__item"><a href="#">Portfolio</a></li>
+              <li class="header__item"><a href="#">Features</a></li>
+              <li class="header__item"><a href="#">Blog</a></li>
+              <li class="header__item"><a href="#">Pricing</a></li>
+              <li class="header__item"><a href="#">Shortcodes</a></li>
+              <li class="header__item"><a href="#">Contact</a></li>
             </ul>
             <button class="header__basket-button">
               <img src="img/icons/header-box-icon.svg" alt="basket" />
             </button>
-            <form class="header__search-form" action="input">
+            <form class="header__search-form" action="#">
+              <input type="search" />
               <img src="img/icons/search-icon.svg" alt="search-form" />
             </form>
           </nav>
         </div>
         <section class="header__carousel">
-          <h2 class="header__h2"></h2>
-          <h1 class="header__h1"></h1>
-          <p class="header__text"></p>
-          <button class="header__"></button>
+          <h2 class="header__subtitle">Unique and Modern Design</h2>
+          <h1 class="header__title">Portfolio PSD Template</h1>
+          <p class="header__text">
+            Nam liber tempor cum soluta nobis eleifend option congue nihil
+            imperdiet doming id quod mazim placerat facer possim assum.
+          </p>
+          <button class="header__button">Get Started</button>
         </section>
       </header>
     </div>
