top of the header is ready

--- a/index.html
+++ b/index.html
@@ -12,35 +12,54 @@
       <header class="header">
         <div class="header__top">
           <div class="header__logo">
-            <img src="/img/logo.svg" alt="logo" />
+            <img src="/img/icons/logos.svg" alt="logo" />
+            <p class="header__logo-text">Waxom</p>
           </div>
           <nav class="header__nav">
             <ul class="header__list">
-              <li class="header__item"><a href="#">Home</a></li>
-              <li class="header__item"><a href="#">About Us</a></li>
-              <li class="header__item"><a href="#">Portfolio</a></li>
-              <li class="header__item"><a href="#">Features</a></li>
-              <li class="header__item"><a href="#">Blog</a></li>
-              <li class="header__item"><a href="#">Pricing</a></li>
-              <li class="header__item"><a href="#">Shortcodes</a></li>
-              <li class="header__item"><a href="#">Contact</a></li>
+              <li class="header__item">
+                <a class="header__item-link" href="#">Home</a>
+              </li>
+              <li class="header__item">
+                <a class="header__item-link" href="#">About Us</a>
+              </li>
+              <li class="header__item">
+                <a class="header__item-link" href="#">Portfolio</a>
+              </li>
+              <li class="header__item">
+                <a class="header__item-link" href="#">Features</a>
+              </li>
+              <li class="header__item">
+                <a class="header__item-link" href="#">Blog</a>
+              </li>
+              <li class="header__item">
+                <a class="header__item-link" href="#">Pricing</a>
+              </li>
+              <li class="header__item">
+                <a class="header__item-link" href="#">Shortcodes</a>
+              </li>
+              <li class="header__item">
+                <a class="header__item-link" href="#">Contact</a>
+              </li>
             </ul>
-            <button class="header__basket-button">
-              <img src="img/icons/header-box-icon.svg" alt="basket" />
-            </button>
-            <form class="header__search-form" action="#">
-              <input type="search" />
-              <img src="img/icons/search-icon.svg" alt="search-form" />
-            </form>
           </nav>
+          <button class="header__basket-button">
+            <img src="img/icons/cart.svg" alt="basket" />
+          </button>
+          <form class="header__search-form" action="#">
+            <input type="search" />
+            <img src="img/icons/search-icon.svg" alt="search-form" />
+          </form>
         </div>
         <section class="header__carousel">
-          <h2 class="header__subtitle">Unique and Modern Design</h2>
-          <h1 class="header__title">Portfolio PSD Template</h1>
-          <p class="header__text">
-            Nam liber tempor cum soluta nobis eleifend option congue nihil
-            imperdiet doming id quod mazim placerat facer possim assum.
-          </p>
+          <div class="header__carousel-text">
+            <h2 class="header__subtitle">Unique and Modern Design</h2>
+            <h1 class="header__title">Portfolio PSD Template</h1>
+            <p class="header__textbox">
+              Nam liber tempor cum soluta nobis eleifend option congue nihil
+              imperdiet doming id quod mazim placerat facer possim assum.
+            </p>
+          </div>
           <button class="header__button">Get Started</button>
         </section>
       </header>
