all blocks heights and backgrounds are done

--- a/index.html
+++ b/index.html
@@ -8,61 +8,88 @@
     <title>Example #2</title>
   </head>
   <body>
-    <div class="container">
-      <header class="header">
-        <div class="header__top">
-          <div class="header__logo">
-            <img src="/img/icons/logos.svg" alt="logo" />
-            <p class="header__logo-text">Waxom</p>
-          </div>
-          <nav class="header__nav">
-            <ul class="header__list">
-              <li class="header__item">
-                <a class="header__item-link" href="#">Home</a>
-              </li>
-              <li class="header__item">
-                <a class="header__item-link" href="#">About Us</a>
-              </li>
-              <li class="header__item">
-                <a class="header__item-link" href="#">Portfolio</a>
-              </li>
-              <li class="header__item">
-                <a class="header__item-link" href="#">Features</a>
-              </li>
-              <li class="header__item">
-                <a class="header__item-link" href="#">Blog</a>
-              </li>
-              <li class="header__item">
-                <a class="header__item-link" href="#">Pricing</a>
-              </li>
-              <li class="header__item">
-                <a class="header__item-link" href="#">Shortcodes</a>
-              </li>
-              <li class="header__item">
-                <a class="header__item-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </nav>
-          <button class="header__basket-button">
-            <img src="img/icons/cart.svg" alt="basket" />
-          </button>
-          <form class="header__search-form" action="#">
-            <input type="search" />
-            <img src="img/icons/search-icon.svg" alt="search-form" />
-          </form>
+    <!-- Header -->
+    <header class="header">
+      <!-- Header-top -->
+      <section class="header__top">
+        <div class="header__logo">
+          <img src="/img/icons/logos.svg" alt="logo" />
+          <p class="header__logo-text">Waxom</p>
         </div>
-        <section class="header__carousel">
-          <div class="header__carousel-text">
-            <h2 class="header__subtitle">Unique and Modern Design</h2>
-            <h1 class="header__title">Portfolio PSD Template</h1>
-            <p class="header__textbox">
-              Nam liber tempor cum soluta nobis eleifend option congue nihil
-              imperdiet doming id quod mazim placerat facer possim assum.
-            </p>
-          </div>
+        <nav class="header__nav">
+          <ul class="header__list">
+            <li class="header__item">
+              <a class="header__item-link" href="#">Home</a>
+            </li>
+            <li class="header__item">
+              <a class="header__item-link" href="#">About Us</a>
+            </li>
+            <li class="header__item">
+              <a class="header__item-link" href="#">Portfolio</a>
+            </li>
+            <li class="header__item">
+              <a class="header__item-link" href="#">Features</a>
+            </li>
+            <li class="header__item">
+              <a class="header__item-link" href="#">Blog</a>
+            </li>
+            <li class="header__item">
+              <a class="header__item-link" href="#">Pricing</a>
+            </li>
+            <li class="header__item">
+              <a class="header__item-link" href="#">Shortcodes</a>
+            </li>
+            <li class="header__item">
+              <a class="header__item-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="header__basket-button">
+          <img src="img/icons/cart.svg" alt="basket" />
+        </button>
+        <form class="header__search-form" action="#">
+          <input type="search" />
+          <img src="img/icons/search-icon.svg" alt="search-form" />
+        </form>
+      </section>
+      <!-- Header-carousel -->
+      <section class="header__carousel">
+        <!-- header-arrow-left -->
+        <div class="header__arrow_left">
+          <a href="#"
+            ><img src="img/icons/header-left.svg" alt="arrow-left"
+          /></a>
+        </div>
+        <!-- header-carosel-textbox -->
+        <div class="header__carousel-textbox">
+          <h2 class="header__subtitle">Unique and Modern Design</h2>
+          <h1 class="header__title">Portfolio PSD Template</h1>
+          <p class="header__text">
+            Nam liber tempor cum soluta nobis eleifend option congue nihil
+            imperdiet doming id quod mazim placerat facer possim assum.
+          </p>
           <button class="header__button">Get Started</button>
-        </section>
-      </header>
-    </div>
+        </div>
+        <!-- header-arrow-right -->
+        <div class="header__arrow_right">
+          <a href="#"
+            ><img src="img/icons/header-right.svg" alt="arrow-right"
+          /></a>
+        </div>
+      </section>
+    </header>
+    <main class="main">
+      <section class="activities"></section>
+      <section class="screenshots"></section>
+      <section class="purchase-now"></section>
+      <section class="our-latsest-projects"></section>
+      <section class="waxom-video-presentation"></section>
+      <section class="excellent-for-mobile"></section>
+      <section class="quantities"></section>
+      <section class="recent-posts"></section>
+      <section class="logotypes"></section>
+      <section class="contacts"></section>
+    </main>
+    <footer class="footer"></footer>
   </body>
 </html>
