backing to stable version

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Example #2</title>
   </head>
   <body>
-    <!-- Header -->
+    <!---------------------------------- Header ----------------------------------------->
     <header class="header">
-      <!-- Header-top -->
+      <!----------------------------- Header-top ------------------------------->
       <section class="header__top">
         <div class="header__logo">
           <img src="/img/icons/logos.svg" alt="logo" />
@@ -52,44 +52,83 @@
           <img src="img/icons/search-icon.svg" alt="search-form" />
         </form>
       </section>
-      <!-- Header-carousel -->
+      <!----------------------------- Header-carousel ------------------------------->
       <section class="header__carousel">
-        <!-- header-arrow-left -->
+        <!----------------------------- header-arrow-left ------------------------------->
         <div class="header__arrow_left">
           <a href="#"
             ><img src="img/icons/header-left.svg" alt="arrow-left"
           /></a>
         </div>
-        <!-- header-carosel-textbox -->
+        <!------------------------------- header-carosel-textbox ------------------------------->
         <div class="header__carousel-textbox">
-          <h2 class="header__subtitle">Unique and Modern Design</h2>
-          <h1 class="header__title">Portfolio PSD Template</h1>
-          <p class="header__text">
-            Nam liber tempor cum soluta nobis eleifend option congue nihil
-            imperdiet doming id quod mazim placerat facer possim assum.
-          </p>
-          <button class="header__button">Get Started</button>
+          <div class="header__carousel-textbox-top">
+            <h2 class="header__subtitle">Unique and Modern Design</h2>
+            <h1 class="header__title">111Portfolio PSD Template</h1>
+            <p class="header__text">
+              Nam liber tempor cum soluta nobis eleifend option congue nihil
+              imperdiet doming id quod mazim placerat facer possim assum.
+            </p>
+          </div>
+          <!------------------------------ header__button ------------------------------->
+          <div class="header__button">
+            <a href="#"><span class="header__button-text">Get Started</span></a>
+          </div>
         </div>
-        <!-- header-arrow-right -->
+        <!------------------------------- header-arrow-right ------------------------------->
         <div class="header__arrow_right">
           <a href="#"
             ><img src="img/icons/header-right.svg" alt="arrow-right"
           /></a>
         </div>
       </section>
+      <section class="header__paggination">
+        <a href="#" class="header__paggination-links"></a>
+        <a href="#" class="header__paggination-links"></a>
+        <a href="#" class="header__paggination-links"></a>
+        <a href="#" class="header__paggination-links"></a>
+      </section>
     </header>
+    <!------------------------------- Main ------------------------------->
     <main class="main">
+      <!-- activities -->
       <section class="activities"></section>
+      <!-- screenshots -->
       <section class="screenshots"></section>
+      <!-- purchase-now -->
       <section class="purchase-now"></section>
+      <!-- our-latsest-projects -->
       <section class="our-latsest-projects"></section>
+      <!-- waxom-video-presentation -->
       <section class="waxom-video-presentation"></section>
+      <!-- excellent-for-mobile -->
       <section class="excellent-for-mobile"></section>
+      <!-- quantities -->
       <section class="quantities"></section>
+      <!-- recent-posts -->
       <section class="recent-posts"></section>
+      <!-- logotypes -->
       <section class="logotypes"></section>
+      <!-- contacts -->
       <section class="contacts"></section>
     </main>
+    <!-- footer -->
     <footer class="footer"></footer>
+
+    <a href="index.html" class="logo">
+      <svg
+        class="logo-svg"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        width="64px"
+        height="56px"
+        viewBox="0 0 64 56"
+      >
+        <path
+          d="M 52.87 55.13C 52.87 55.13 58.13 45.94 58.13 45.94 58.13 45.94 63.38 55.13 63.38 55.13 63.38 55.13 52.87 55.13 52.87 55.13ZM 46.3 45.17C 46.3 45.17 56.81 45.17 56.81 45.17 56.81 45.17 51.56 54.36 51.56 54.36 51.56 54.36 46.3 45.17 46.3 45.17ZM 51.56 34.45C 51.56 34.45 56.81 43.64 56.81 43.64 56.81 43.64 46.3 43.64 46.3 43.64 46.3 43.64 51.56 34.45 51.56 34.45ZM 39.74 33.69C 39.74 33.69 50.24 33.69 50.24 33.69 50.24 33.69 44.99 42.87 44.99 42.87 44.99 42.87 39.74 33.69 39.74 33.69ZM 44.99 22.97C 44.99 22.97 50.24 32.15 50.24 32.15 50.24 32.15 39.74 32.15 39.74 32.15 39.74 32.15 44.99 22.97 44.99 22.97ZM 33.17 22.2C 33.17 22.2 43.68 22.2 43.68 22.2 43.68 22.2 38.42 31.39 38.42 31.39 38.42 31.39 33.17 22.2 33.17 22.2ZM 38.42 11.48C 38.42 11.48 43.68 20.67 43.68 20.67 43.68 20.67 33.17 20.67 33.17 20.67 33.17 20.67 38.42 11.48 38.42 11.48ZM 26.6 10.71C 26.6 10.71 37.11 10.71 37.11 10.71 37.11 10.71 31.85 19.9 31.85 19.9 31.85 19.9 26.6 10.71 26.6 10.71ZM 31.85-0.01C 31.85-0.01 37.11 9.18 37.11 9.18 37.11 9.18 26.6 9.18 26.6 9.18 26.6 9.18 31.85-0.01 31.85-0.01ZM 20.03 20.67C 20.03 20.67 25.29 11.48 25.29 11.48 25.29 11.48 30.54 20.67 30.54 20.67 30.54 20.67 20.03 20.67 20.03 20.67ZM 13.46 32.15C 13.46 32.15 18.72 22.97 18.72 22.97 18.72 22.97 23.97 32.15 23.97 32.15 23.97 32.15 13.46 32.15 13.46 32.15ZM 6.9 43.64C 6.9 43.64 12.15 34.45 12.15 34.45 12.15 34.45 17.4 43.64 17.4 43.64 17.4 43.64 6.9 43.64 6.9 43.64ZM 0.33 55.13C 0.33 55.13 5.58 45.94 5.58 45.94 5.58 45.94 10.84 55.13 10.84 55.13 10.84 55.13 0.33 55.13 0.33 55.13ZM 17.4 45.17C 17.4 45.17 12.15 54.36 12.15 54.36 12.15 54.36 6.9 45.17 6.9 45.17 6.9 45.17 17.4 45.17 17.4 45.17ZM 23.97 33.69C 23.97 33.69 18.72 42.87 18.72 42.87 18.72 42.87 13.46 33.69 13.46 33.69 13.46 33.69 23.97 33.69 23.97 33.69ZM 30.54 22.2C 30.54 22.2 25.29 31.39 25.29 31.39 25.29 31.39 20.03 22.2 20.03 22.2 20.03 22.2 30.54 22.2 30.54 22.2ZM 37.11 55.13C 37.11 55.13 26.6 55.13 26.6 55.13 26.6 55.13 31.85 45.94 31.85 45.94 31.85 45.94 37.11 55.13 37.11 55.13ZM 43.68 45.17C 43.68 45.17 38.42 54.36 38.42 54.36 38.42 54.36 33.17 45.17 33.17 45.17 33.17 45.17 43.68 45.17 43.68 45.17ZM 50.24 55.13C 50.24 55.13 39.74 55.13 39.74 55.13 39.74 55.13 44.99 45.94 44.99 45.94 44.99 45.94 50.24 55.13 50.24 55.13Z"
+        />
+      </svg>
+      <span class="logo-txt">Waxom</span>
+    </a>
   </body>
 </html>
