--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="header__carousel-textbox">
           <div class="header__carousel-textbox-top">
             <h2 class="header__subtitle">Unique and Modern Design</h2>
-            <h1 class="header__title">111Portfolio PSD Template</h1>
+            <h1 class="header__title">Portfolio PSD Template</h1>
             <p class="header__text">
               Nam liber tempor cum soluta nobis eleifend option congue nihil
               imperdiet doming id quod mazim placerat facer possim assum.
@@ -83,10 +83,11 @@
         </div>
       </section>
       <section class="header__paggination">
-        <a href="#" class="header__paggination-links"></a>
-        <a href="#" class="header__paggination-links"></a>
-        <a href="#" class="header__paggination-links"></a>
-        <a href="#" class="header__paggination-links"></a>
+        <a href="#" class="header__paggination-items"></a>
+        <a href="#" class="header__paggination-items"></a>
+        <a href="#" class="header__paggination-items"></a>
+        <a href="#" class="header__paggination-items"></a>
+        <a href="#" class="header__paggination-items"></a>
       </section>
     </header>
     <!------------------------------- Main ------------------------------->
