--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
         <button class="header__basket-button">
           <img src="img/icons/cart.svg" alt="basket" />
         </button>
-        <form class="header__search-form" action="#">
+        <form class="header__search-form" action="#" method="post">
           <input type="search" />
-          <img src="img/icons/search-icon.svg" alt="search-form" />
         </form>
       </section>
       <!----------------------------- Header-carousel ------------------------------->
@@ -83,17 +82,52 @@
         </div>
       </section>
       <section class="header__paggination">
-        <a href="#" class="header__paggination-items"></a>
-        <a href="#" class="header__paggination-items"></a>
-        <a href="#" class="header__paggination-items"></a>
-        <a href="#" class="header__paggination-items"></a>
-        <a href="#" class="header__paggination-items"></a>
+        <a href="#" class="header__paggination-item"></a>
+        <a href="#" class="header__paggination-item"></a>
+        <a href="#" class="header__paggination-item"></a>
+        <a href="#" class="header__paggination-item"></a>
+        <a href="#" class="header__paggination-item"></a>
       </section>
     </header>
     <!------------------------------- Main ------------------------------->
     <main class="main">
       <!-- activities -->
-      <section class="activities"></section>
+      <section class="activities">
+        <div class="container">
+          <div class="activities__item">
+            <img src="/img/icons/service-icon-1.svg" alt="icon1" />
+            <span>Web & App Design</span>
+            <p>
+              Nam liber tempor cum soluta nobis eleifend option congue nihil
+              imperdiet doming id quod mazim.
+            </p>
+          </div>
+          <div class="activities__item activities__item2">
+            <img src="/img/icons/service-icon-2.svg" alt="icon2" />
+            <span>Development</span>
+            <p>
+              Lorem ipsum dolor sit amet, adipiscing elit, sed diam nonummy nibh
+              euismod tincidunt ut laoreet.
+            </p>
+          </div>
+          <div class="activities__item">
+            <img src="/img/icons/service-icon-3.svg" alt="icon3" />
+            <span>Customization</span>
+            <p>
+              Nam liber tempor cum soluta nobis eleifend option congue nihil
+              imperdiet doming id quod mazim.
+            </p>
+          </div>
+          <div class="activities__item">
+            <img src="/img/icons/service-icon-4.svg" alt="icon4" />
+            <span>Marketing</span>
+            <p>
+              Nam liber tempor cum soluta nobis eleifend option congue nihil
+              imperdiet doming id quod mazim.
+            </p>
+          </div>
+        </div>
+      </section>
       <!-- screenshots -->
       <section class="screenshots"></section>
       <!-- purchase-now -->
