4 blocks are done!

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Example #2</title>
   </head>
   <body>
-    <!---------------------------------- Header ----------------------------------------->
+    <!---------------------------------------------------- header -->
     <header class="header">
-      <!----------------------------- Header-top ------------------------------->
+      <!---------------------------------------------------- header-top -->
       <section class="header__top">
         <div class="header__logo">
           <img src="/img/icons/logos.svg" alt="logo" />
@@ -51,15 +51,15 @@
           <input type="search" />
         </form>
       </section>
-      <!----------------------------- Header-carousel ------------------------------->
+      <!---------------------------------------------------- header-carousel -->
       <section class="header__carousel">
-        <!----------------------------- header-arrow-left ------------------------------->
+        <!---------------------------------------------------- header-arrow-left -->
         <div class="header__arrow_left">
           <a href="#"
             ><img src="img/icons/header-left.svg" alt="arrow-left"
           /></a>
         </div>
-        <!------------------------------- header-carosel-textbox ------------------------------->
+        <!---------------------------------------------------- header-carosel-textbox -->
         <div class="header__carousel-textbox">
           <div class="header__carousel-textbox-top">
             <h2 class="header__subtitle">Unique and Modern Design</h2>
@@ -74,7 +74,7 @@
             <a href="#"><span class="header__button-text">Get Started</span></a>
           </div>
         </div>
-        <!------------------------------- header-arrow-right ------------------------------->
+        <!---------------------------------------------------- header-arrow-right -->
         <div class="header__arrow_right">
           <a href="#"
             ><img src="img/icons/header-right.svg" alt="arrow-right"
@@ -89,9 +89,9 @@
         <a href="#" class="header__paggination-item"></a>
       </section>
     </header>
-    <!------------------------------- Main ------------------------------->
+    <!---------------------------------------------------- main -->
     <main class="main">
-      <!-- activities -->
+      <!---------------------------------------------------- activities -->
       <section class="activities">
         <div class="container">
           <div class="activities__item">
@@ -128,26 +128,49 @@
           </div>
         </div>
       </section>
-      <!-- screenshots -->
-      <section class="screenshots"></section>
-      <!-- purchase-now -->
-      <section class="purchase-now"></section>
-      <!-- our-latsest-projects -->
+      <!---------------------------------------------------- screenshots -->
+      <section class="screenshots">
+        <div class="screenshots__text">
+          <span class="block-title">Waxom is Realization of your Ideas.</span>
+          <p class="block-text">
+            Investigationes demonstraverunt lectores legere me lius quod ii
+            legunt saepius. Claritas est etiam processus dynamicus, qui sequitur
+            mutationem consuetudium.
+          </p>
+        </div>
+        <div class="screenshots__images"></div>
+      </section>
+      <!---------------------------------------------------- purchase-now -->
+      <aside class="ad">
+        <div class="ad__wrapper">
+          <p class="ad__title">
+            <span>Waxom</span>
+            Multipurpose WordPress Theme
+          </p>
+          <p class="ad__text">
+            Don't Forget to Rate the Template. Thanks so much!
+          </p>
+        </div>
+        <button class="ad__button">
+          <span class="ad__button-text">purchase now</span>
+        </button>
+      </aside>
+      <!---------------------------------------------------- our-latsest-projects -->
       <section class="our-latsest-projects"></section>
-      <!-- waxom-video-presentation -->
+      <!---------------------------------------------------- waxom-video-presentation -->
       <section class="waxom-video-presentation"></section>
-      <!-- excellent-for-mobile -->
+      <!---------------------------------------------------- excellent-for-mobile -->
       <section class="excellent-for-mobile"></section>
-      <!-- quantities -->
+      <!---------------------------------------------------- quantities -->
       <section class="quantities"></section>
-      <!-- recent-posts -->
+      <!---------------------------------------------------- recent-posts -->
       <section class="recent-posts"></section>
-      <!-- logotypes -->
+      <!---------------------------------------------------- logotypes -->
       <section class="logotypes"></section>
-      <!-- contacts -->
+      <!---------------------------------------------------- contacts -->
       <section class="contacts"></section>
     </main>
-    <!-- footer -->
+    <!---------------------------------------------------- footer -->
     <footer class="footer"></footer>
 
     <a href="index.html" class="logo">
