scss separated files + header button done

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             </p>
           </div>
           <!------------------------------ header__button ------------------------------->
-          <div class="header__button">
-            <a href="#"><span class="header__button-text">Get Started</span></a>
-          </div>
+          <a class="header__button">
+            <span class="header__button-text">Get Started</span>
+          </a>
         </div>
         <!---------------------------------------------------- header-arrow-right -->
         <div class="header__arrow_right">
